<resources>
    <string name="app_name">Small Talk</string>
    <string name="join_channel">Join Channel</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
    <string name="avatar">Avatar</string>
    <string name="message_holder">BlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBla\n\nBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBlaBla</string>
    <string name="fragment_chat">Chat</string>
    <string name="enter">Enter</string>
    <string name="more_options">More Options</string>
    <string name="group_name_holder">Group One</string>
    <string name="file_name_holder">XXXXXXXX.txt</string>
    <string name="file_size_holder">15.6 KB</string>
    <string name="image_message">Image Message</string>
    <string name="upload_all">Upload All</string>
    <string name="select_file">Select File</string>
    <string name="file_cancel">File Cancel</string>
    <string name="send_message">Send Message</string>
    <string name="image">Image</string>
    <string name="key">Private Key</string>
    <string name="channel_id">Channel ID</string>
    <string name="endpoint">Endpoint</string>
    <string name="contract_address">Contract Address</string>
    <string name="switch_account">Switch Account</string>
</resources>
